[gd_scene load_steps=17 format=3 uid="uid://ck4wan5hlu22r"]

[ext_resource type="Texture2D" uid="uid://dwpkodpwictrq" path="res://Sprites/Individual Tiles/tile_0036.png" id="1_fs6gi"]
[ext_resource type="Script" path="res://Scripts/tileplacer.gd" id="2_4pyd8"]
[ext_resource type="Script" path="res://Scripts/tile_selected.gd" id="2_usxpb"]
[ext_resource type="Texture2D" uid="uid://dvod4jnxhv2xn" path="res://Sprites/Individual Tiles/tile_0039.png" id="3_ad8pr"]
[ext_resource type="TileSet" uid="uid://bbtmfhv774qs5" path="res://tiles.tres" id="4_p1q8n"]
[ext_resource type="Texture2D" uid="uid://wcslbmr7e3f2" path="res://Sprites/Individual Tiles/tile_0042.png" id="4_ws0t7"]
[ext_resource type="Texture2D" uid="uid://cty2ch37hap64" path="res://Sprites/Individual Tiles/tile_0013.png" id="5_hhqco"]
[ext_resource type="Texture2D" uid="uid://dnc04p6k5f306" path="res://Sprites/Individual Tiles/tile_0055.png" id="6_22wts"]
[ext_resource type="Script" path="res://layer_ui_controller.gd" id="7_lo15d"]
[ext_resource type="Script" path="res://Scripts/grid_view.gd" id="8_bnand"]
[ext_resource type="Script" path="res://Scripts/camera_2d.gd" id="9_k2aya"]
[ext_resource type="AudioStream" uid="uid://dcleo237kf0cj" path="res://Sound FX/641216__spiderfair__highlightlong.wav" id="9_yt64q"]
[ext_resource type="Script" path="res://tile_sound.gd" id="10_dhie0"]
[ext_resource type="Script" path="res://tile_animator.gd" id="12_wok4m"]
[ext_resource type="Texture2D" uid="uid://rkoepnvo4p47" path="res://Sprites/tilemap.png" id="13_8maii"]
[ext_resource type="Script" path="res://tile_map_layer_container.gd" id="15_fb4pe"]

[node name="Game" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="AutoTiles" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="HillTile" type="Button" parent="UI/MarginContainer/AutoTiles"]
layout_mode = 2
text = "Hill"
icon = ExtResource("1_fs6gi")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("2_usxpb")

[node name="WatherTile" type="Button" parent="UI/MarginContainer/AutoTiles"]
layout_mode = 2
text = "Wather"
icon = ExtResource("3_ad8pr")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("2_usxpb")
terrain_set_id = 1
terrain_id = 1

[node name="PathTile" type="Button" parent="UI/MarginContainer/AutoTiles"]
layout_mode = 2
text = "Path"
icon = ExtResource("4_ws0t7")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("2_usxpb")
terrain_id = 1

[node name="TreeTile" type="Button" parent="UI/MarginContainer/AutoTiles"]
layout_mode = 2
text = "Trees"
icon = ExtResource("5_hhqco")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("2_usxpb")
terrain_set_id = 1

[node name="RiverTile" type="Button" parent="UI/MarginContainer/AutoTiles"]
layout_mode = 2
text = "River"
icon = ExtResource("6_22wts")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("2_usxpb")
terrain_set_id = 1
terrain_id = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/AutoTiles" node_paths=PackedStringArray("tile_map_layer_container")]
layout_mode = 2
script = ExtResource("7_lo15d")
tile_map_layer_container = NodePath("../../../../TileMapLayerContainer")

[node name="Substract" type="Button" parent="UI/MarginContainer/AutoTiles/HBoxContainer"]
layout_mode = 2
text = "-
"
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="PreviousLayer" type="Button" parent="UI/MarginContainer/AutoTiles/HBoxContainer"]
layout_mode = 2
text = "<<
"
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="LayerCount" type="Label" parent="UI/MarginContainer/AutoTiles/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="NextLayer" type="Button" parent="UI/MarginContainer/AutoTiles/HBoxContainer"]
layout_mode = 2
text = ">>
"
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Add" type="Button" parent="UI/MarginContainer/AutoTiles/HBoxContainer"]
layout_mode = 2
text = "+"
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("9_k2aya")
initial_movement_speed = 600
movement_speed_when_shifting = 2000

[node name="Miselanious" type="Node" parent="."]

[node name="AudioListener2D" type="AudioListener2D" parent="Miselanious"]
scale = Vector2(5, 5)

[node name="GridView" type="Node2D" parent="."]
scale = Vector2(5, 5)
script = ExtResource("8_bnand")

[node name="TileMapLayerContainer" type="Node2D" parent="."]
scale = Vector2(5, 5)
script = ExtResource("15_fb4pe")

[node name="Layer" type="TileMapLayer" parent="TileMapLayerContainer"]
tile_set = ExtResource("4_p1q8n")
script = ExtResource("2_4pyd8")

[node name="TileSound" type="AudioStreamPlayer2D" parent="TileMapLayerContainer/Layer"]
stream = ExtResource("9_yt64q")
max_polyphony = 20
script = ExtResource("10_dhie0")

[node name="TileAnimator" type="Node" parent="TileMapLayerContainer/Layer"]
script = ExtResource("12_wok4m")
tileset_texture = ExtResource("13_8maii")
